[package]
name = "yui"
description = "Rust GUI framework from scratch with OpenGL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
glam = "0.22.0"
glow = "0.11.2"
glutin = "0.30.3"
glutin-winit = "0.2.1"
image = "0.24.5"
miette = { version = "5.5.0", features = ["fancy"] }
raw-window-handle = "0.5.0"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
winit = "0.27.5"
